# wasmtime-java

./: .gitignore  .project  Cargo.toml  Makefile  README.md  pom.xml
.github/workflows/: test.yml
src/main/java/net/bluejekyll/wasmtime/: AbstractOpaquePtr.java  WasmEngine.java  WasmEngineT.java  WasmFunction.java  WasmInstance.java  WasmLinker.java  WasmModule.java  WasmModuleT.java  WasmStore.java  WasmStoreT.java  Wasmtime.java  WasmtimeErrorT.java  WasmtimeException.java
src/main/java/net/bluejekyll/wasmtime/proxy/: WasmExport.java  WasmExportable.java  WasmFunctionDef.java  WasmImport.java  WasmImportProxy.java  WasmImportable.java  WasmModule.java
src/main/java/net/bluejekyll/wasmtime/ty/: ExternRef.java  F32.java  F64.java  FuncRef.java  I32.java  I64.java  V128.java  ValType.java  WasmType.java  WasmTypeUtil.java  WasmVoid.java
src/main/java/net/bluejekyll/wasmtime/types/: WasmType.java
src/test/java/net/bluejekyll/wasmtime/: TestUtil.java  WasmEngineTest.java  WasmFunctionTest.java  WasmFuntionTest.java  WasmInstanceTest.java  WasmLinkerTest.java  WasmModuleTest.java  WasmStoreTest.java  WasmtimeExceptionTest.java  WasmtimeTest.java
src/test/java/net/bluejekyll/wasmtime/proxy/: ExportTests.java  ImportTests.java  TestExport.java  TestImportProxy.java
tests/math/: Cargo.toml
tests/math-wit/: Cargo.toml
tests/math-wit/src/: lib.rs  math.wit
tests/math/src/: lib.rs
tests/slices/: Cargo.toml
tests/slices/src/: lib.rs
tests/strings/: Cargo.toml
tests/strings/src/: lib.rs
wasmtime-jni/: Cargo.toml  build.rs
wasmtime-jni-exports/: Cargo.toml
wasmtime-jni-exports/src/: lib.rs
wasmtime-jni/src/: lib.rs  opaque_ptr.rs  wasm_engine.rs  wasm_exception.rs  wasm_function.rs  wasm_instance.rs  wasm_linker.rs  wasm_module.rs  wasm_state.rs  wasm_store.rs  wasm_value.rs  wasmtime.rs
wasmtime-jni/src/ty/: byte_slice.rs  complex_ty.rs  mod.rs  str.rs  wasm_alloc.rs
(+4 files in other folders)
