[package]
name = "wasmtime-jni"
version = "0.1.0"
authors = ["Benjamin Fry <benjaminfry@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasmtime_jni"
crate_type = ["cdylib"]

[dependencies]
anyhow = "1.0.32"
flexi_logger = "0.17.1"
#env_logger = "0.7.1"
jni = "0.19.0"
log = "0.4.11"
wasi-common = "0.31.0"
wasmtime = { version = "0.34", features=["jitdump", "wat", "cache"] }
wasmtime-jni-exports = { path = "../wasmtime-jni-exports" }
wasmtime-wasi = "0.31.0"